--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -1,4 +1,5 @@
 $title-color: #979797;
+$blue-color: #4A90E2;
 
 .entity-view {
   position: relative;
@@ -13,21 +14,24 @@ $title-color: #979797;
 
   &__change-mode {
     position: absolute;
-    top: 42px;
+    top: 47px;
     left: 10px;
-    width: 46px;
-    height: 46px;
+    width: 36px;
+    height: 36px;
     border-radius: 50%;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-    background-color: #5999E0;
+    background-color: $blue-color;
     color: white;
     z-index: 1;
     cursor: pointer;
 
     md-icon {
       position: absolute;
-      top: 11px;
-      left: 11px;
+      top: 8px;
+      left: 8px;
+      width: 18px;
+      height: 18px;
+      font-size: 18px;
     }
   }
 
@@ -44,7 +48,7 @@ $title-color: #979797;
       padding-left: 60px;
       height: 55px;
       line-height: 55px;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 500;
 
       &--first {
@@ -57,6 +61,97 @@ $title-color: #979797;
         margin-left: 20px;
         cursor: pointer;
       }
+
+      &__label {
+
+      }
+
+      &__action {
+        float: right;
+        margin-right: 10px;
+        cursor: pointer;
+      }
+    }
+
+    .notes {
+      background: #E6EAF2;
+
+      &__content {
+        padding: 30px 60px;
+        font-size: 14px;
+
+        md-textarea {
+           width: 100%;
+        }
+      }
+    }
+
+    &__body {
+      padding: 0 25px;
+
+      &__section {
+        margin: 30px 35px;
+        border: 1px solid rgba(0,0,0,0.3);
+        display: inline-block;
+
+        &__title {
+          position: relative;
+          height: 30px;
+
+          span {
+            position: absolute;
+            top: 15px;
+            left: 15px;
+            height:35px;
+            font-size: 16px;
+            color: $blue-color;
+            font-weight: 600;
+          }
+
+          md-icon {
+            position: absolute;
+            top: 8px;
+            right: 10px;
+            color: rgba(0, 0, 0, 0.5);
+            cursor: pointer;
+          }
+        }
+
+        .section__column {
+          padding: 15px;
+        }
+      }
+
+      &__column {
+        display: inline-block;
+        padding: 30px 35px;
+        vertical-align: top;
+
+        &__title {
+          font-size: 16px;
+          color: $blue-color;
+          font-weight: 600;
+        }
+
+        &__subtitle {
+          font-size: 16px;
+          color: #9B9B9B;
+          font-weight: 600;
+        }
+
+        &__item {
+          margin: 20px 0;
+          font-size: 14px;
+
+          &__label {
+            font-weight: 500;
+          }
+        }
+      }
+    }
+
+    &__placeholder {
+      height: 100px;
     }
 
     &__fields {
