--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -41,6 +41,7 @@ $blue-color: #4A90E2;
     box-sizing: border-box;
     width: 100%;
     min-height: calc(100% - 65px);
+    padding-bottom: 60px;
     background-color: white;
 
     &__title {
