--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -1,5 +1,5 @@
 <div class="entity-view">
-  <div class="entity-view__title">Customer</div>
+  <div class="entity-view__title">Transaction</div>
 
   <div *ngIf="service.hasWritePermission()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
