Fix design of transaction view page.

--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -45,7 +45,7 @@
       <ng-container *ngFor="let product of entity.products">
         <div class="entity-view__content__body__section">
           <div class="entity-view__content__body__column section__column">
-            <div class="entity-view__content__body__column__item">
+            <div class="entity-view__content__body__column__item item--single">
               <span class="entity-view__content__body__column__item__label">Amount:</span>
               <span>{{product.amount}}</span>
             </div>
