--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -148,6 +148,10 @@ $blue-color: #4A90E2;
             font-weight: 500;
           }
         }
+
+        .item--single {
+          margin: 0 0 20px 0;
+        }
       }
     }
 
