--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@
 @import "assets/scss/_dashboard.scss";
 @import "assets/scss/_search.scss";
 @import "assets/scss/_advanced-search.scss";
+@import "assets/scss/_datepicker-custom.scss";
 
 /***************
   HTML Styles
